[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlayerInventory.gd" type="Script" id=1]
[ext_resource path="res://InventoryList.tscn" type="PackedScene" id=2]
[ext_resource path="res://ItemTooltip.tscn" type="PackedScene" id=3]
[ext_resource path="res://ItemModControl.tscn" type="PackedScene" id=4]

[node name="PlayerInventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="ItemList" parent="." instance=ExtResource( 2 )]

[node name="ItemSelected" parent="." instance=ExtResource( 3 )]
margin_left = -178.0
margin_top = 66.0
margin_right = 2.0
margin_bottom = 456.0

[node name="Stats" parent="ItemSelected" index="2"]
margin_bottom = 282.0

[node name="EquipButton" type="Button" parent="ItemSelected"]
margin_left = 10.0
margin_top = 292.0
margin_right = 170.0
margin_bottom = 332.0
text = "Equip Item"

[node name="ModButton" type="Button" parent="ItemSelected"]
margin_left = 10.0
margin_top = 342.0
margin_right = 170.0
margin_bottom = 382.0
text = "Modify Item"

[node name="WeaponFilter" type="Button" parent="."]
margin_top = 8.0
margin_right = 108.0
margin_bottom = 46.0
text = "Weapons"

[node name="GemFilter" type="Button" parent="."]
margin_left = 118.0
margin_top = 8.0
margin_right = 228.0
margin_bottom = 46.0
text = "Gems"

[node name="ModifyPopup" type="PopupPanel" parent="."]
visible = true
margin_left = -12.0
margin_top = -12.0
margin_right = 708.0
margin_bottom = 468.0

[node name="ItemMods" parent="ModifyPopup" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CloseModify" type="Button" parent="ModifyPopup/ItemMods"]
margin_left = 532.0
margin_top = 396.0
margin_right = 696.0
margin_bottom = 446.0
text = "Done Modifying"

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_up" from="ItemSelected/EquipButton" to="." method="_on_EquipButton_button_up"]
[connection signal="button_up" from="ItemSelected/ModButton" to="." method="_on_modify_button_up"]
[connection signal="button_up" from="WeaponFilter" to="." method="_on_filter_button_up" binds= [ "weapon" ]]
[connection signal="button_up" from="GemFilter" to="." method="_on_filter_button_up" binds= [ "gem" ]]
[connection signal="about_to_show" from="ModifyPopup" to="." method="_on_ModifyPopup_about_to_show"]
[connection signal="button_up" from="ModifyPopup/ItemMods/CloseModify" to="." method="_on_CloseModify_button_up"]

[editable path="ItemSelected"]
